infra/chat-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatappfrontend
  labels:
    app: chatappfrontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatappfrontend
  template:
    metadata:
      labels:
        app: chatappfrontend
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
      - name: chatappfrontend 
        image: gcr.io/umg-social-tech/front:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
