infra/chat-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-frontend-service
spec:
  #type: LoadBalancer
  selector:
    app: chatappfrontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
