infra/chat-app/uwuservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: uwuchatapp-frontend-service
spec:
  selector:
    app: chatappfrontend
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
